Separate the dataset into training and testing sets.

--- a/svm-regression.ipynb
+++ b/svm-regression.ipynb
@@ -42,6 +42,7 @@
     "import seaborn as sb  # Streamline charting.\n",
     "import sklearn  # Perform feature engineering and machine learning.\n",
     "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.model_selection import train_test_split\n",
     "from sklearn.svm import SVR\n",
     "\n",
     "# Summarize software libraries used.\n",
@@ -1029,6 +1030,43 @@
     "**Spotlights** \n",
     "\n",
     "The margins have significantly expanded, allowing for more data examples to fit within them. Additionally, the regression line has moved higher, and its slope has decreased a bit. This change isn't automatically an improvement for this specific situation and could potentially result in overfitting. Later, as work is done with the complete dataset, the best epsilon value will be explored."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1e07e6d3-0c7b-474e-871d-f352ce7b3b00",
+   "metadata": {},
+   "source": [
+    "### Divide the dataset into training and testing sets."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "ce339c40-4a95-44d3-bc29-642d1c46ea30",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The datasets for training and testing, along with their corresponding labels, have been divided.\n"
+     ]
+    }
+   ],
+   "source": [
+    "outcome = [\"target\"]\n",
+    "\n",
+    "predictors = [\"MedInc\", \"AveRooms\", \"Latitude\"]\n",
+    "\n",
+    "# Split data into training and testing sets.\n",
+    "X_train, X_test, y_train, y_test = train_test_split(\n",
+    "    df[predictors], df[outcome], random_state=2\n",
+    ")\n",
+    "\n",
+    "print(\n",
+    "    \"The datasets for training and testing, along with their corresponding labels, have been divided.\"\n",
+    ")"
    ]
   }
  ],
