--- a/svm-regression.ipynb
+++ b/svm-regression.ipynb
@@ -41,7 +41,9 @@
     "import pandas as pd  # Manipulate and analyze data frames.\n",
     "import seaborn as sb  # Streamline charting.\n",
     "import sklearn  # Perform feature engineering and machine learning.\n",
+    "from sklearn import preprocessing\n",
     "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.metrics import mean_squared_error as mse\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.svm import SVR\n",
     "\n",
@@ -1067,6 +1069,97 @@
     "print(\n",
     "    \"The datasets for training and testing, along with their corresponding labels, have been divided.\"\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cf5d8a70-82cb-40f3-8735-bc27b65314fc",
+   "metadata": {},
+   "source": [
+    "### Standardize the features for better performance."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9d1c54af-d195-4910-9c74-83c3016e787a",
+   "metadata": {},
+   "source": [
+    "It's important to remember that the point of normalizing the features in this dataset is to ensure that the regularization penalty is uniformly applied. Additionally, support vector machines generally perform better when the data is scaled."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "b2cc7a07-40eb-4dbe-a3b9-91c898b51c45",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Features standardized.\n"
+     ]
+    }
+   ],
+   "source": [
+    "def standardize(X):\n",
+    "    df_standardized = X.copy()\n",
+    "    stdscaler = preprocessing.StandardScaler()\n",
+    "    df_standardized[predictors] = stdscaler.fit_transform(df_standardized[predictors])\n",
+    "\n",
+    "    return df_standardized\n",
+    "\n",
+    "\n",
+    "X_train = standardize(X_train)\n",
+    "X_test = standardize(X_test)\n",
+    "\n",
+    "print(\"Features standardized.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ac610844-0860-4fbf-bb34-634386901586",
+   "metadata": {},
+   "source": [
+    "### Assess the SVM model using a separate holdout test set \n",
+    "\n",
+    "To begin, simply reuse the value of 1.2 for epsilon as a starting point.This epsilon value, although taken from previous instances, is normally random."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "7a2bd030-1899-4d2f-876e-e91be3282e96",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cost (mean squared error): 0.8046\n"
+     ]
+    }
+   ],
+   "source": [
+    "svm_model = SVR(kernel=\"linear\", epsilon=1.2)\n",
+    "svm_model.fit(X_train, np.ravel(y_train))\n",
+    "\n",
+    "preds = svm_model.predict(X_test)\n",
+    "\n",
+    "# Calculate cost using the test data.\n",
+    "cost = mse(y_test, preds)\n",
+    "\n",
+    "print(\"Cost (mean squared error): {:.4f}\".format(cost))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5fbb3ee1-2489-4ee3-a94d-b9ed205d0e83",
+   "metadata": {},
+   "source": [
+    "**Spotlights** \n",
+    "\n",
+    "The mean squared error (MSE) for this model stands at 0.8046. While this is slightly higher than the MSE of approximately 0.73 achieved by the earlier linear regression models, it indicates that there is still room for enhancement."
    ]
   }
  ],
