Optmize the SVM model through grid search and cross-validation.

--- a/svm-regression.ipynb
+++ b/svm-regression.ipynb
@@ -31,6 +31,7 @@
     }
    ],
    "source": [
+    "import math\n",
     "import os  # Interact with the operating system.\n",
     "import sys  # Read system parameters.\n",
     "import time as time\n",
@@ -44,7 +45,7 @@
     "from sklearn import preprocessing\n",
     "from sklearn.linear_model import LinearRegression\n",
     "from sklearn.metrics import mean_squared_error as mse\n",
-    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.model_selection import GridSearchCV, train_test_split\n",
     "from sklearn.svm import SVR\n",
     "\n",
     "# Summarize software libraries used.\n",
@@ -620,11 +621,7 @@
    "id": "bbb2ce4b-462a-4b69-800c-fa9006d4bd51",
    "metadata": {},
    "source": [
-    "### Examine Correlations with '**target**'\n",
-    "\n",
-    "- \n",
-    "- \n",
-    "- "
+    "### Examine Correlations with '**target**'"
    ]
   },
   {
@@ -733,7 +730,7 @@
     "- MedInc represents the median income level of people living in a specific census block group.\n",
     "- It seems there are a few higher-than-average values that stand out in the data.\n",
     "- Typically, the median income for a particular area tends to be under 8.\n",
-    "- The outliers begin to diminish around the value of 14, although there are still a few notable exceptions that spike up to around 16."
+    "- The outliers start at 8 and begin to diminish around the value of 14, although there are still a few notable exceptions that spike up to around 16."
    ]
   },
   {
@@ -813,11 +810,11 @@
    "source": [
     "## Graph a regression line based on a specified model.\n",
     "\n",
-    "This function, once executed, will overlay a regression line onto the scatter plot you saw before.\n",
+    "This function, once executed, will overlay a regression line onto the scatter plot from before.\n",
     "- To use the function, providing the training data, label data, and the model object will be needed.\n",
     "- The is_svm parameter decides if the margins will be displayed for SVM models.\n",
-    "- The scatter plot is generated in lines 3 to 5, while lines 9 to 24 handle the regression line and support-vector margins for SVM models.\n",
-    "- Lines 25 to 28 focus solely on the regression line for non-SVM models."
+    "- The scatter plot is generated in lines 3 to 9, while lines 15 to 35 handle the regression line and support-vector margins for SVM models.\n",
+    "- Lines 36 to 39 focus solely on the regression line for non-SVM models."
    ]
   },
   {
@@ -1061,7 +1058,7 @@
     "\n",
     "predictors = [\"MedInc\", \"AveRooms\", \"Latitude\"]\n",
     "\n",
-    "# Split data into training and testing sets.\n",
+    "\"\"\"Parititon the data into training and testing sets.\"\"\"\n",
     "X_train, X_test, y_train, y_test = train_test_split(\n",
     "    df[predictors], df[outcome], random_state=2\n",
     ")\n",
@@ -1144,10 +1141,10 @@
     "svm_model = SVR(kernel=\"linear\", epsilon=1.2)\n",
     "svm_model.fit(X_train, np.ravel(y_train))\n",
     "\n",
-    "preds = svm_model.predict(X_test)\n",
+    "predicted = svm_model.predict(X_test)\n",
     "\n",
     "# Calculate cost using the test data.\n",
-    "cost = mse(y_test, preds)\n",
+    "cost = mse(y_test, predicted)\n",
     "\n",
     "print(\"Cost (mean squared error): {:.4f}\".format(cost))"
    ]
@@ -1160,6 +1157,173 @@
     "**Spotlights** \n",
     "\n",
     "The mean squared error (MSE) for this model stands at 0.8046. While this is slightly higher than the MSE of approximately 0.73 achieved by the earlier linear regression models, it indicates that there is still room for enhancement."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9a0f1097-2f2a-47bc-ad3c-3639180deb1c",
+   "metadata": {},
+   "source": [
+    "### Refine the SVM model through grid search and cross-validation\n",
+    "\n",
+    "Note: This may take roughly 10 minutes to execute."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "4c43469c-5d7f-43ed-8908-f4d8f2cc2637",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model took 475,295.08 milliseconds to fit.\n"
+     ]
+    }
+   ],
+   "source": [
+    "svm_model = SVR(gamma=\"auto\")\n",
+    "\n",
+    "grid = [\n",
+    "    {\n",
+    "        \"kernel\": [\"linear\", \"rbf\", \"poly\", \"sigmoid\"],\n",
+    "        \"C\": [0.01, 0.1, 1],\n",
+    "        \"epsilon\": [0.5, 0.8, 1.2],\n",
+    "    }\n",
+    "]\n",
+    "\n",
+    "grid_search = GridSearchCV(\n",
+    "    svm_model, param_grid=grid, scoring=\"neg_mean_squared_error\", cv=3\n",
+    ")\n",
+    "start = time.time()\n",
+    "grid_search.fit(X_train, np.ravel(y_train))\n",
+    "end = time.time()\n",
+    "train_time = (end - start) * 1000\n",
+    "print(\"Model took {:,.2f} milliseconds to fit.\".format(train_time))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c9773c3f-4fa1-45c5-88ce-d39579480038",
+   "metadata": {},
+   "source": [
+    "**Display the best parameters**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "4ea9f238-bec5-4e31-b344-0438a7d732bb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'C': 1, 'epsilon': 0.5, 'kernel': 'rbf'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(grid_search.best_params_)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "73433a33-dfdf-4f20-9fee-768ef7bee66f",
+   "metadata": {},
+   "source": [
+    "**Spotlights**\n",
+    "\n",
+    "The grid search revealed that the best hyperparameter combination consists of a C value of 1, an epsilon value of 0.5, and the RBF kernel.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "daf34b53-ed2a-4391-988f-1d93c64abe0b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cost (mean squared error): 0.6110\n"
+     ]
+    }
+   ],
+   "source": [
+    "predicted = grid_search.predict(X_test)\n",
+    "\n",
+    "cost = mse(y_test, predicted)\n",
+    "\n",
+    "print(\"Cost (mean squared error): {:.4f}\".format(cost))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b36d5f8e-d3da-4f20-9002-1251e40a15cf",
+   "metadata": {},
+   "source": [
+    "As a result, the model's error has decreased and is now even lower than that of your top-performing linear regression models."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e51b8f20-53b7-49a0-861f-ead0e73f6bd6",
+   "metadata": {},
+   "source": [
+    "#### Display predicted values to target values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "fabe48ec-c28b-48bd-8e81-d3d92d5690f8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "             target     predicted\n",
+      "10385 $1,623,224.99 $2,291,838.68\n",
+      "1943    $797,251.50   $582,836.67\n",
+      "7490    $263,004.25   $288,073.91\n",
+      "16889 $3,439,805.42   $836,639.44\n",
+      "11416 $4,965,007.99 $5,144,944.71\n",
+      "10297 $2,193,316.77 $1,780,834.93\n",
+      "16843 $1,665,982.28 $1,280,232.82\n",
+      "11528   $196,403.30   $464,251.13\n",
+      "18951   $269,123.45   $607,123.88\n",
+      "3728  $1,681,043.79   $813,752.34\n",
+      "11467 $1,470,224.20   $518,781.62\n",
+      "13971   $510,898.11   $454,346.75\n",
+      "18103 $3,178,517.54 $4,672,677.48\n",
+      "14245   $237,026.08   $266,480.99\n",
+      "18634 $3,412,396.76 $1,364,000.06\n",
+      "2808    $195,814.97   $253,206.90\n",
+      "12859   $308,021.68   $286,848.45\n",
+      "844   $1,150,751.15 $3,231,028.79\n",
+      "13338   $490,865.51   $908,179.55\n",
+      "15100   $425,885.35   $628,448.36\n",
+      "6527    $507,841.90   $513,172.76\n"
+     ]
+    }
+   ],
+   "source": [
+    "predictions = y_test.copy()\n",
+    "predictions[\"predicted\"] = predicted\n",
+    "\n",
+    "\"\"\"Revert the prices back to initial actual values.\"\"\"\n",
+    "predictions = predictions.applymap(math.exp).apply(lambda price: price * 100000)\n",
+    "\n",
+    "\"\"\"Examine samples of the actual and predicted prices\"\"\"\n",
+    "with pd.option_context(\"float_format\", \"${:,.2f}\".format):\n",
+    "    print(predictions.head(21))"
    ]
   }
  ],
