Calculate and display median house value.

--- a/svm-regression.ipynb
+++ b/svm-regression.ipynb
@@ -570,6 +570,35 @@
   },
   {
    "cell_type": "markdown",
+   "id": "02d0ff0b-fecb-41ec-8b20-afff3e17961f",
+   "metadata": {},
+   "source": [
+    "**Median House Value**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "ffc5a0e8-af8d-44cf-9cfd-f9439063b3e1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Median House Value: \t179700.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "median = df.target.median() * 100000\n",
+    "\n",
+    "with pd.option_context(\"float_format\", \"${:,.0f}\".format):\n",
+    "    print(f\"Median House Value: \\t{median}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "107d25c6-8130-48b2-b27d-f19e7a6e216e",
    "metadata": {},
    "source": [
@@ -578,7 +607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "7d88da84-c336-4b46-b0d9-6642f8804938",
    "metadata": {},
    "outputs": [
@@ -604,7 +633,7 @@
        "Name: target, dtype: float64"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -626,7 +655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "3a35a107-9dc2-4d4f-89e1-76037a832d68",
    "metadata": {},
    "outputs": [
@@ -693,7 +722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "087b954d-0b22-4b65-a125-5d84b9254127",
    "metadata": {},
    "outputs": [
@@ -745,7 +774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "186ad34b-09c3-400b-b9f7-87b7412ad02d",
    "metadata": {},
    "outputs": [],
@@ -764,7 +793,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "876817f6-d500-4ea3-aef0-b566a169295c",
    "metadata": {},
    "outputs": [
@@ -819,7 +848,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "e78ae160-d530-4370-b2ee-f5f7c65b1d77",
    "metadata": {},
    "outputs": [
@@ -895,7 +924,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "f7ea2919-b3b6-492c-96ef-1c0f36c86d5c",
    "metadata": {},
    "outputs": [
@@ -943,7 +972,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "a737c707-a3b5-4580-b9cd-3eec984b67ae",
    "metadata": {},
    "outputs": [
@@ -999,7 +1028,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "79fef275-73b2-40e3-b2db-5d4cc20adda6",
    "metadata": {},
    "outputs": [
@@ -1041,7 +1070,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "ce339c40-4a95-44d3-bc29-642d1c46ea30",
    "metadata": {},
    "outputs": [
@@ -1086,7 +1115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "id": "b2cc7a07-40eb-4dbe-a3b9-91c898b51c45",
    "metadata": {},
    "outputs": [
@@ -1125,7 +1154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "id": "7a2bd030-1899-4d2f-876e-e91be3282e96",
    "metadata": {},
    "outputs": [
@@ -1171,7 +1200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "id": "4c43469c-5d7f-43ed-8908-f4d8f2cc2637",
    "metadata": {},
    "outputs": [
@@ -1179,7 +1208,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model took 475,295.08 milliseconds to fit.\n"
+      "Model took 495,241.16 milliseconds to fit.\n"
      ]
     }
    ],
@@ -1214,7 +1243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "id": "4ea9f238-bec5-4e31-b344-0438a7d732bb",
    "metadata": {},
    "outputs": [
@@ -1243,7 +1272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "id": "daf34b53-ed2a-4391-988f-1d93c64abe0b",
    "metadata": {},
    "outputs": [
@@ -1281,7 +1310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 24,
    "id": "fabe48ec-c28b-48bd-8e81-d3d92d5690f8",
    "metadata": {},
    "outputs": [
